        plugins.

      - Group and user plugins can now specify their own title for a
        principal entry (PAS will not compute one if they do).

      - PAS and/or plugins can now take advantage of caching using the
        Zope ZCacheable framework with RAM Cache Managers. See
        doc/caching.stx for the details.

    Bugs Fixed

      - Made logging when swallowing exceptions much less noisy (they
        *don't* necessarily require attention).

      - Clarified interface of IAuthenticationPlugin, which should return
        None rather than raising an exception if asked to authenticate an
        unknown principal;  adjusted ZODBUserManager accordingly.

      - Don't log an error in zodb_user_plugin's authenticateCredentials
        if we don't have a record for a particular username, just return None.

      - If an IAuthenticationPlugin returns None instead of a tuple
        from authenticateCredentials, don't log a tuple-unpack error in PAS
	    itself.

  PluggableAuthService 1.0.3 (2004/10/16)

    Bugs Fixed

      - Implemented support for issuing challenges via IChallengePlugins.

        - three challenge styles in particular:

          - HTTP Basic Auth

          - CookieCrumbler-like redirection

          - Inline authentication form

      - Made unit tests pass when run with cAccessControl.

      - plugins/ZODBRoleManager.py: don't claim authority for 'Authenticated'
        or 'Anonymous' roles, which are managed by PAS.

      - plugins/ZODBRoleManager.py: don't freak out if a previously assigned
        principal goes away.

      - plugins/ZODBGroupManager.py: don't freek out if a previously assigned
        principal goes away.

      - plugins/ZODBUserManager.py: plugin now uses AuthEncoding for its
        password encryption so that we can more easily support migrating
        existing UserFolders. Since PAS has been out for a while,
        though, we still will authenticate against old credentials
